--- a/home.html
+++ b/home.html
@@ -31,20 +31,17 @@
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Menu</a>
+      <a class="navbar-brand" href="#">Statistics</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="./home.html">Home</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Congress 115
+              Congress <span class="congressNo">116</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="./house-data.html">House</a>
@@ -75,7 +72,7 @@
       </div>
     </nav>
 
-    <div class="card" style="border: none; border-radius: 0;">
+    <div class="card about" style="border: none; border-radius: 0;">
       <div class="row">
         <div class="col-md-12">
           <div class="card-body p-5">
